# llm-delusions-external

./: .gitattributes  .gitignore  .prettierignore  LICENSE  Makefile  PAPER_TODO.md  README.md  README_Analyses.md  README_Annotation.md  README_Parse.md  README_Subsets.md  environment.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
analysis/: agreement_pr.py  compute_annotation_frequencies.py  compute_annotation_length_effects.py  compute_annotation_post_onset_lengths.py  compute_annotation_set_frequencies.py  compute_annotation_topics.py  compute_annotation_window_incidence.py  compute_demographics.py  compute_participant_annotation_profiles.py  compute_sequential_annotation_dynamics.py  conversation_length_glmm.R  demo_join_annotations_transcripts.py  make_participant_plots.py  participant_ordering.json  plot_annotation_frequency_histogram.py  plot_annotation_hazard_effects.py  plot_annotation_length_effects.py  plot_annotation_set_frequencies.py  plot_annotation_streamgraphs_by_ppts.py  plot_annotation_topics.py  plot_annotations_by_ppts.py  plot_sequential_annotation_bars.py  plot_sequential_annotation_bars_pair.py  plot_sequential_annotation_dynamics.py  plot_sequential_annotation_histogram_pair.py  preprocess_annotation_family.py  summarize_preprocessed_scope_coverage.py
analysis/data/: annotation_frequencies.csv  (+12 more)
analysis_dashboards/: annotation_dashboard_noTimestamps.py  annotation_dashboard_timestamps.py  dashboard_common.py
annotations/: all_annotations__preprocessed.parquet
scripts/: check_repo_sizes.sh
(+195 files in other folders)
