# ./pyproject.toml
[project]
name = "llm-delusions"
version = "0.1.0"
description = "Tools for working with chat transcripts with LLM delusions"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[flake8]
max-line-length = 88

[tool.pytest.ini_options]
filterwarnings = [
  # turn every warning into an error  
  "error",
]

[tool.pylint.reports]
output-format = "colorized"   # options: text, parseable, colorized, json, msvs

[tool.setuptools.package-data]
data = ["*.csv"]
